# discordpy-template

./: LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
Docker/: Dockerfile
cog/: bot.py
config/: discord_secret.json
misc/: init.bat  init.sh
src/: main.py
src/cog/: app_command_sample.py  bot.py  on_ready.py  tasks.py  test_command.py
src/help/: help_command.py
src/libs/: get_token.py
