[tool.poetry]
name = "discordpy-template"
version = "0.1.0"
description = ""
authors = ["t4t5u0 <48282855+t4t5u0@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.0.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
